--- a/backend/BranchApi/BranchApi.csproj
+++ b/backend/BranchApi/BranchApi.csproj
@@ -5,13 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="ProductImages\**" />
-    <Content Remove="ProductImages\**" />
-    <EmbeddedResource Remove="ProductImages\**" />
-    <None Remove="ProductImages\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="11.0.1" />
     <PackageReference Include="LiteDB" Version="5.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.17" />
@@ -27,6 +20,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ProductImages\" />
   </ItemGroup>
 
   <ItemGroup>
