- Get all workers and delete worker methods implemented

--- a/backend/ExchangeRateApi/Properties/launchSettings.json
+++ b/backend/ExchangeRateApi/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
     "profiles": {
-        "ProductApi": {
+        "ExchangeRateApi": {
             "commandName": "Project",
             "dotnetRunMessages": "true",
             "launchBrowser": true,
