--- a/backend/LoanApi/appsettings.json
+++ b/backend/LoanApi/appsettings.json
@@ -10,5 +10,5 @@
         "DbConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
     },
     "SecretKey": "secretpassword12345567890",
-    "AllowedHosts": "*",
+    "AllowedHosts": "*"
 }
