--- a/backend/BankAccountApi/Properties/launchSettings.json
+++ b/backend/BankAccountApi/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
     "profiles": {
-        "ProductApi": {
+        "BankAccountApi": {
             "commandName": "Project",
             "dotnetRunMessages": "true",
             "launchBrowser": true,
