updated .net version

--- a/backend/ExchangeRateApi/appsettings.json
+++ b/backend/ExchangeRateApi/appsettings.json
@@ -6,9 +6,9 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-    "ConnectionStrings": {
-        "DbConnection": "Data Source=(localdb)\\ProjectModels;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
-    },
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BankDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
     "SecretKey": "secretpassword12345567890",
     "AllowedHosts": "*",
 }
