--- a/backend/BranchApi/appsettings.json
+++ b/backend/BranchApi/appsettings.json
@@ -10,6 +10,5 @@
     "DbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BankDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
     "SecretKey": "secretpassword12345567890",
-    "AllowedHosts": "*",
-    "StoredFilesPath": "ProductImages"
+    "AllowedHosts": "*"
 }
