- Exchange transfer from one to another account implemented

--- a/backend/BankAccountApi/appsettings.json
+++ b/backend/BankAccountApi/appsettings.json
@@ -6,9 +6,12 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-  "ConnectionStrings": {
-    "DbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BankDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
-  },
+    "ConnectionStrings": {
+        "DbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BankDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
     "SecretKey": "secretpassword12345567890",
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "MicroserviceSettings": {
+        "ExchangeRateServiceUrl": "http://localhost:5000"
+    }
 }
