- Appointment cancelation implemented

--- a/backend/IdentityApi/appsettings.json
+++ b/backend/IdentityApi/appsettings.json
@@ -6,11 +6,14 @@
             "Microsoft.Hosting.Lifetime": "Information"
         }
     },
-  "ConnectionStrings": {
-    "DbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BankDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
-  },
+    "ConnectionStrings": {
+        "DbConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BankDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    },
     "SecretKey": "secretpassword12345567890",
     "AllowedHosts": "*",
-    "StoredFilesPath": "ProfileImages"
+    "StoredFilesPath": "ProfileImages",
+    "MicroserviceSettings": {
+        "BranchServiceUrl": "http://localhost:5000"
+    }
 
 }
